notifications: fix overflow problem

--- a/server/static/css/personal_center.css
+++ b/server/static/css/personal_center.css
@@ -197,9 +197,12 @@
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  height: 100%;
   padding: 4rem 0 4rem 7rem; }
 
 #notifications-list > .notification.items {
+  max-height: 100%;
+  overflow-y: auto;
   border: 1px solid #e4e4e4; }
 
 #notifications-list > .notification.items > .notification.item {
